<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreatePinCodeFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/thirty_dp">

            <EditText
                android:id="@+id/txtNewPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thirty_dp"
                android:layout_marginBottom="@dimen/fifteen_dp"
                android:backgroundTint="@color/tranparent_white"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/create_pin_text"
                android:inputType="numberPassword"
                android:paddingTop="@dimen/five_dp"
                android:paddingBottom="@dimen/five_dp"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/tranparent_white"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <EditText
                android:id="@+id/txtReNewPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:layout_marginBottom="@dimen/fifteen_dp"
                android:backgroundTint="@color/tranparent_white"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/create_pin_text_again"
                android:inputType="numberPassword"
                android:paddingTop="@dimen/five_dp"
                android:paddingBottom="@dimen/five_dp"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/tranparent_white"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>


            <Button
                android:id="@+id/btCreatePin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:layout_marginBottom="@dimen/fifteen_dp"
                android:background="@drawable/background_border_white"
                android:paddingStart="@dimen/twenty_dp"
                android:paddingEnd="@dimen/twenty_dp"
                android:text="@string/accept_text"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/black" />
        </LinearLayout>

        <pqh.vn.pliz.etoken.activity.ui.PinKeyView
            android:id="@+id/pinInputView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:maxLenght="6" />
    </LinearLayout>
</LinearLayout>